fixed spacing on nav and alignment.

--- a/chucks-pick3-web/assets/css/style-sheet.css
+++ b/chucks-pick3-web/assets/css/style-sheet.css
@@ -484,7 +484,9 @@ h2 {
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 1.1%;
+    padding: 0%;
+    height: 51px;
+    line-height: 3.225em;
     text-decoration: none;
 'Lato', serif;
 }
